@@ -5,7 +5,7 @@ TODO: openbsd requires stdint.h for intptr_t - why posix?
 
 TODO: make mtouch/readdir maybe others cancellable in-request
 TODO: fadvise request
-TODO: ***at/fdopendir via alloc_cwd, free_cwd
+TODO: fdopendir/utimensat
 1.0
 	- fix a deadlock where a wakeup signal could be missed when
           a timeout occured at the same time.
@@ -61,4 +61,6 @@ TODO: ***at/fdopendir via alloc_cwd, free_cwd
         - added syncfs support, using direct syscall.
         - set thread name on linux (ps -L/Hcx, top, gdb).
         - remove useless use of volatile variables.
+        - fix memory leak when reaping threads.
+        - use utime now uses nanosecond resolution on posix 2008 systems.
 
